--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
     <!-- <script src="js/index.js"></script> -->
     <!-- <script src="js/examples/if-example.js"></script> -->
-    <script src="js/examples/if-else-example.js"></script>
+    <!-- <script src="js/examples/if-else-example.js"></script> -->
+    <script src="js/examples/switch-case-example.js"></script>
     
 </head>
 <body>
