Changes to be committed: 	modified:   index.html 	new file:   js/examples/loops.js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- <script src="js/examples/if-example.js"></script> -->
     <!-- <script src="js/examples/if-else-example.js"></script> -->
     <!-- <script src="js/examples/switch-case-example.js"></script> -->
-    <script src="js/examples/logical-operators.js"></script>
+    <!-- <script src="js/examples/logical-operators.js"></script> -->
+    <script src="js/examples/loops.js"></script>
     
 </head>
 <body>
