--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <!-- <script src="js/index.js"></script> -->
     <!-- <script src="js/examples/if-example.js"></script> -->
     <!-- <script src="js/examples/if-else-example.js"></script> -->
-    <script src="js/examples/switch-case-example.js"></script>
+    <!-- <script src="js/examples/switch-case-example.js"></script> -->
+    <!-- <script src="js/examples/functions-base.js"></script> -->
+    <script src="js/examples/functions-syntax.js"></script>
     
 </head>
 <body>
