modified:   index.html 	new file:   js/examples/objects-base.js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- <script src="js/examples/logical-operators.js"></script> -->
     <!-- <script src="js/examples/loops.js"></script> -->
     <!-- <script src="js/examples/functions-base.js"></script> -->
-    <script src="js/examples/functions-syntax.js"></script>
+    <!-- <script src="js/examples/functions-syntax.js"></script> -->
+    <script src="js/examples/objects-base.js"></script>
 
 </head>
 <body>
