--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- <script src="js/examples/loops.js"></script> -->
     <!-- <script src="js/examples/functions-base.js"></script> -->
     <!-- <script src="js/examples/functions-syntax.js"></script> -->
-    <script src="js/examples/objects-base.js"></script>
+    <!-- <script src="js/examples/objects-base.js"></script> -->
+    <script src="js/examples/objects.js"></script>
 
 </head>
 <body>
