modified:   index.html 	new file:   js/HomeWork/00_Arrays.txt 	new file:   js/examples/arrays.js 	new file:   js/examples/objects-practic.js 	new file:   js/examples/rest-in-func-params.js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <!-- <script src="js/examples/functions-base.js"></script> -->
     <!-- <script src="js/examples/functions-syntax.js"></script> -->
     <!-- <script src="js/examples/objects-base.js"></script> -->
-    <script src="js/examples/objects.js"></script>
+    <!-- <script src="js/examples/objects.js"></script> -->
+    <!-- <script src="js/examples/arrays.js"></script> -->
+    <!-- <script src="js/examples/objects-practic.js"></script> -->
+    <script src="js/examples/rest-in-func-params.js"></script>
 
 </head>
 <body>
