--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <!-- <script src="js/examples/objects.js"></script> -->
     <!-- <script src="js/examples/arrays.js"></script> -->
     <!-- <script src="js/examples/objects-practic.js"></script> -->
-    <script src="js/examples/rest-in-func-params.js"></script>
+    <!-- <script src="js/examples/rest-in-func-params.js"></script> -->
+    <!-- <script src="js/examples/functions-extra.js"></script> -->
+    <!-- <script src="js/examples/functions-extra-2.js"></script> -->
+    <!-- <script src="js/examples/functions-extra-3.js"></script> -->
+    <script src="js/examples/functions-closure-counter.js"></script>
 
 </head>
 <body>
